@@ -19,8 +19,9 @@ import net.n2oapp.framework.engine.data.N2oInvocationProcessor;
 import net.n2oapp.framework.engine.data.java.JavaDataProviderEngine;
 import net.n2oapp.framework.engine.data.json.TestDataProviderEngine;
 import net.n2oapp.framework.engine.util.TestEntity;
-import org.junit.Before;
-import org.junit.Test;
+
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.mockito.stubbing.Answer;
 
 import java.util.*;
@@ -41,8 +42,8 @@ public class InvocationProcessorTest {
     private N2oInvocationProcessor invocationProcessor;
     private JavaDataProviderEngine javaDataProviderEngine;
 
-    @Before
-    public void setUp() throws Exception {
+    @BeforeEach
+    void setUp() throws Exception {
         N2oInvocationFactory actionInvocationFactory = mock(N2oInvocationFactory.class);
         javaDataProviderEngine = new JavaDataProviderEngine();
         when(actionInvocationFactory.produce(N2oJavaDataProvider.class)).thenReturn(javaDataProviderEngine);
@@ -63,7 +64,7 @@ public class InvocationProcessorTest {
     }
 
     @Test
-    public void testDefaultValue() {
+    void testDefaultValue() {
         N2oJavaDataProvider method = new N2oJavaDataProvider();
         method.setMethod("methodWithOneArgument");
         method.setClassName("net.n2oapp.framework.engine.test.source.StaticInvocationTestClass");
@@ -95,7 +96,7 @@ public class InvocationProcessorTest {
     }
 
     @Test
-    public void testArgumentsInvocation() {
+    void testArgumentsInvocation() {
         N2oJavaDataProvider method = new N2oJavaDataProvider();
         method.setMethod("sum");
         method.setClassName("net.n2oapp.framework.engine.test.source.StaticInvocationTestClass");
@@ -169,7 +170,7 @@ public class InvocationProcessorTest {
     }
 
     @Test
-    public void testEntityMapping() {
+    void testEntityMapping() {
         testDefaultValue();
         testNormalizing();
         testMappingCondition();
@@ -177,7 +178,7 @@ public class InvocationProcessorTest {
     }
 
     @Test
-    public void testMappingCondition() {
+    void testMappingCondition() {
         N2oJavaDataProvider method = new N2oJavaDataProvider();
         method.setMethod("methodReturnedEntity");
         method.setClassName("net.n2oapp.framework.engine.test.source.StaticInvocationTestClass");
@@ -228,7 +229,7 @@ public class InvocationProcessorTest {
     }
 
     @Test
-    public void fullMappingTest() {
+    void fullMappingTest() {
         N2oJavaDataProvider method = new N2oJavaDataProvider();
         method.setMethod("methodReturnedEntity");
         method.setClassName("net.n2oapp.framework.engine.test.source.StaticInvocationTestClass");
@@ -306,7 +307,7 @@ public class InvocationProcessorTest {
     }
 
     @Test
-    public void testMapsInvocation() {
+    void testMapsInvocation() {
         DataSet dataSet = new DataSet();
         dataSet.put("id", 1);
         List<AbstractParameter> inMapping = new ArrayList<>();
@@ -327,7 +328,7 @@ public class InvocationProcessorTest {
     }
 
     @Test
-    public void testNormalizing() {
+    void testNormalizing() {
         N2oJavaDataProvider method = new N2oJavaDataProvider();
         method.setMethod("methodReturnedEntity");
         method.setClassName("net.n2oapp.framework.engine.test.source.StaticInvocationTestClass");
@@ -357,7 +358,7 @@ public class InvocationProcessorTest {
     }
 
     @Test
-    public void testListNormalizing() {
+    void testListNormalizing() {
         N2oTestDataProvider invocation = new N2oTestDataProvider();
         invocation.setOperation(N2oTestDataProvider.Operation.echo);
 
@@ -420,7 +421,7 @@ public class InvocationProcessorTest {
     }
 
     @Test
-    public void testAdvancedNestingWithMapInvocationProvider() {
+    void testAdvancedNestingWithMapInvocationProvider() {
         N2oTestDataProvider invocation = new N2oTestDataProvider();
         invocation.setOperation(N2oTestDataProvider.Operation.echo);
 
@@ -513,7 +514,7 @@ public class InvocationProcessorTest {
     }
 
     @Test
-    public void testMappingWithArgumentsInvocationProvider() {
+    void testMappingWithArgumentsInvocationProvider() {
         N2oJavaDataProvider invocation = new N2oJavaDataProvider();
         invocation.setClassName("net.n2oapp.framework.engine.test.source.StaticInvocationTestClass");
         invocation.setMethod("methodWithTwoArguments");
@@ -561,7 +562,7 @@ public class InvocationProcessorTest {
      * Тестирование маппинга аргументов java провайдера с использованием name аргументов, а не через заданный порядок
      */
     @Test
-    public void testNameMappingWithArgumentsInvocationProvider() {
+    void testNameMappingWithArgumentsInvocationProvider() {
         N2oJavaDataProvider invocation = new N2oJavaDataProvider();
         invocation.setClassName("net.n2oapp.framework.engine.test.source.StaticInvocationTestClass");
         invocation.setMethod("methodWithThreeArguments");
@@ -605,7 +606,7 @@ public class InvocationProcessorTest {
     }
 
     @Test
-    public void testAdvancedNestingWithArgumentsInvocationProvider() {
+    void testAdvancedNestingWithArgumentsInvocationProvider() {
         N2oJavaDataProvider invocation = new N2oJavaDataProvider();
         invocation.setClassName("net.n2oapp.framework.engine.test.source.StaticInvocationTestClass");
         invocation.setMethod("methodReturnedEntity");
@@ -694,7 +695,7 @@ public class InvocationProcessorTest {
     }
 
     @Test
-    public void testResultMapping() {
+    void testResultMapping() {
         N2oTestDataProvider invocation = new N2oTestDataProvider();
         invocation.setResultMapping("['organization']");
         invocation.setOperation(N2oTestDataProvider.Operation.echo);
@@ -735,12 +736,11 @@ public class InvocationProcessorTest {
         assertThat(result.getString("myName"), is("test1"));
     }
 
-
-    public static class SqlInvocationEngine implements MapInvocationEngine<N2oSqlDataProvider> {
+    static class SqlInvocationEngine implements MapInvocationEngine<N2oSqlDataProvider> {
 
         @Override
         public Object invoke(N2oSqlDataProvider invocation, Map<String, Object> data) {
-            return new Object[]{new Object[]{new Object[]{new Integer(1), "test"}}};
+            return new Object[]{new Object[]{new Object[]{Integer.valueOf(1), "test"}}};
         }
 
         @Override
